# ChessScoreBoard

./: LICENSE  README.md
Project/: CMakeLists.txt  main.cpp
Project/Frames/: ChessScoreBoardMainFrame.cpp  ChessScoreBoardMainFrame.h  generated.cpp  generated.h
Project/Logic/: Score.cpp  Score.hpp  ScoreBoard.cpp  ScoreBoard.hpp
src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/Frames/: ChessScoreBoardMainFrame.cpp  ChessScoreBoardMainFrame.h  generated.cpp  generated.h
src/Logic/: Score.cpp  Score.hpp  ScoreBoard.cpp  ScoreBoard.hpp  ValueConfiguration.cpp  ValueConfiguration.hpp
windows-release/: copy.bat
wxFB_Project/: ChessScoreBoard.fbp
